--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,4 @@ command = "npm run build"
 command = "npm run dev"
 
 [template.environment]
-OPENAI_API_KEY = "your OpenAI API key"
+OPENAI_API_KEY = "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"
